--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
-name: C/C++ CI
+name: build
 
 on:
-  push: {}
-  pull_request: {}
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -13,6 +13,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
-    - name: test
-      run: make test
- 
+      
+    #gui build TODO
