--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,8 @@
-name: C/C++ CI
+name: build
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -15,6 +13,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
-    - name: test
-      run: make test
- 
+   
+    #TODO: gui build
+
+    - name: clean
+      run: make clean
+    
