--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: go to source directory
-      run: cd src
     - name: make
-      run: make
+      run: cd src && make
     - name: clean
-      run: make clean
+      run: cd src && make clean
     
