--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: go to source directory
-      run: cd src
     - name: make
-      run: make
+      run: cd src && make
     - name: test
-      run: make test
+      run: cd src && make test
