novy package, edit Makefile a .pro file
+ smazani neplatneho testu

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,14 @@
 TARGETS = doctests calc profile
+EXEC = calc
 SRC = arguments_parser.cpp doctests.cpp mathlib.cpp stddev.cpp
 OBJ = $(patsubst %.cpp,%.o,$(SRC))
+DESTDIR = calc-01
+INSFLAGS = -m 0755
 
 CXX = g++
 CXXFLAGS = -std=c++11 -O2 -Wall -Wextra -pedantic -g
 
-.PHONY: all clean pack test doc run profile
+.PHONY: all clean pack test doc run profile install
 
 .DEFAULT_GOAL := all
 
@@ -14,8 +17,8 @@ all: $(TARGETS)
 $(OBJ): $(SRC)
 	$(CXX) $(CXXFLAGS) -c $^
 
-calc:
-	if ! dpkg-query -W qtbase5-dev; then sudo apt-get update && sudo apt-get install -y qtbase5-dev; fi
+$(EXEC):
+	if ! dpkg-query -W qtbase5-dev; then sudo apt-get update && sudo apt-get install qtbase5-dev; fi
 	qmake && make -f QMakefile
 
 doctests: doctests.o mathlib.o
@@ -26,19 +29,19 @@ clean:
 
 pack:
 #zip file will pack all the files and directories from the parent directory recursively and will be created in the parent directory
-	zip -r ../xeffen00_xvalik05_xhorut01_xhejni00.zip ../
+	cd .. && zip -r xeffen00_xvalik05_xhorut01_xhejni00.zip .
 
-test:
+test: doctests
 	@echo "==============================================================================="
 	@echo "RUNNING DOCTESTS"
 	./doctests
 	@echo "==============================================================================="
 
 doc:
-	if ! dpkg-query -W doxygen; then sudo apt-get update && sudo apt-get install -y doxygen; fi
+	if ! dpkg-query -W doxygen; then sudo apt-get update && sudo apt-get install doxygen; fi
 	doxygen Doxyfile
 
-run:
+run: calc
 	@echo "==============================================================================="
 	@echo "RUNNING CALCULATOR"
 	./calc
@@ -46,3 +49,7 @@ run:
 
 profile: stddev.o mathlib.o
 	$(CXX) $(CXXFLAGS) -pg $^ -o stddev
+
+install: $(EXEC)
+	mkdir -p $(DESTDIR)/usr/bin
+	install $(INSFLAGS) $(EXEC) $(DESTDIR)/usr/bin
