ikonka pro manualni instalaci

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,8 +18,13 @@ $(OBJ): $(SRC)
 	$(CXX) $(CXXFLAGS) -c $^
 
 $(EXEC):
-	if ! dpkg-query -W qtbase5-dev; then sudo apt-get update && sudo apt-get install qtbase5-dev; fi
+	if ! dpkg-query -W qtbase5-dev; then sudo apt-get install qtbase5-dev; fi
 	qmake && make -f QMakefile
+	if ! dpkg-query -W binutils; then sudo apt-get install binutils; fi
+	objcopy --add-section .myicon=calcicon.png calc calc-with-icon
+	xdg-icon-resource install --context mimetypes --size 128 calcicon.png calc-with-icon
+
+
 
 doctests: doctests.o mathlib.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
@@ -38,7 +43,7 @@ test: doctests
 	@echo "==============================================================================="
 
 doc:
-	if ! dpkg-query -W doxygen; then sudo apt-get update && sudo apt-get install doxygen; fi
+	if ! dpkg-query -W doxygen; then sudo apt-get install doxygen; fi
 	doxygen Doxyfile
 
 run: calc
