--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,7 @@ $(OBJ): $(SRC)
 
 $(EXEC):
 	if ! dpkg-query -W qtbase5-dev; then sudo apt-get install qtbase5-dev; fi
+	sudo apt install libdouble-conversion3 libpcre2-16-0 libegl1 libgbm1 libgl1 libice6 libinput10 libmd4c0 libmtdev1 libqt5dbus5 libqt5network5 libsm6 libxcb-glx0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0 libxcb-sync1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xinput0 libxcb-xkb1 libxkbcommon-x11-0 libxkbcommon0 libqt5svg5 qt5-gtk-platformtheme
 	qmake && make -f QMakefile
 
 doctests: doctests.o mathlib.o
